--- a/www/style.css
+++ b/www/style.css
@@ -1,11 +1,12 @@
 /* === Base (cores, fontes, layout geral) === */
 body {
   margin: 0;
-  padding: 40px 20px;
+  padding: 190px 20px 40px; /* Aumentei o padding-top */
   background-color: #000;
   color: #fff;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 
 h1, h2 {
   text-align: center;
@@ -162,7 +163,8 @@ button:hover {
 }
 
 /* === Lista de links comuns === */
-ul {
+/* Seletor mais específico */
+ul:not(.nav-links) {
   max-width: 500px;
   margin: 20px auto;
   padding: 0;
@@ -170,6 +172,7 @@ ul {
   border-top: 1px solid #333;
   border-bottom: 1px solid #333;
 }
+
 
 ul li {
   padding: 10px;
